added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -3,3 +3,9 @@
   author = {Leonard, Sean},
   year = {2016},
 }
+
+
+@article{leijenmadoko,
+  title = {{Madoko Reference 0.9. 18-beta}},
+  author = {Leijen, Daan},
+}
