added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -9,3 +9,11 @@
   title = {{Madoko Reference 0.9. 18-beta}},
   author = {Leijen, Daan},
 }
+
+
+@article{johnston2016jatdown,
+  title = {{Jatdown: a markdown language for writing JATS}},
+  author = {Johnston, Paul},
+  year = {2016},
+  publisher = {National Center for Biotechnology Information (US)},
+}
