--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -17,3 +17,8 @@
   year = {2016},
   publisher = {National Center for Biotechnology Information (US)},
 }
+
+@webpage{Kwts0NlF,
+title = {{The four pillars of scholarly publishing: The future and a foundation [PeerJ Preprints]}},
+url = {https://peerj.com/preprints/11/}
+}
